# esp32-iot-mqtt-ota

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  out.txt  partitions.csv
main/: CMakeLists.txt  Kconfig  MyTest.c  MyTest.h  actuator_pwm.c  actuator_pwm.h  app_main.c  backoff.c  backoff.h  command.c  command.h  config.h  config_manager.c  config_manager.h  crash_counter.c  crash_counter.h  mqtt.c  mqtt.h  mqtt_state.c  mqtt_state.h  msg_queue.c  msg_queue.h  ota.c  ota.h  sensor_manager.c  sensor_manager.h  state_manager.c  state_manager.h  tasks.c  tasks.h  utils.c  utils.h  wifi.c  wifi.h
main/docs/: architecture.md
